fixed flex of fixt params, styled scrollbars webkit

--- a/app/assets/stylesheets/_pages.scss
+++ b/app/assets/stylesheets/_pages.scss
@@ -1,4 +1,4 @@
-// Generic styling
+// Common page styling
 
 
 $off-white: #fdfdfd;
@@ -82,6 +82,17 @@ button {
   font-size: 0.8rem;
 }
 
+.f-delete {
+  @extend button;
+  background-color: $dark-grey;
+  border: 1px solid darkgrey;
+  color: cornsilk;
+}
+
+.f-delete:focus {
+  outline: none;
+  background-color: $browser-blue;
+}
 
 .on {
   color: $highlight !important;
@@ -131,12 +142,9 @@ a:hover {
 
 
 .option-container {
-  // display: table;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  // align-items: center;
-  // justify-content: center;
   margin: 0;
   padding: 0;
   border: 1px solid lighten( $dark-grey, 10% );
@@ -151,6 +159,12 @@ a:hover {
 
 .flex-container {
   display: flex;
+}
+
+.flex-container-row {
+  @extend .flex-container;
+  flex-direction: row;
+  align-items: center;
 }
 
 .flex-large {
@@ -176,4 +190,24 @@ a:hover {
 
 .lowlight-hover:hover {
   color: $browser-blue !important;
+}
+
+
+// scrollbar ****
+// TODO test cross browser compat
+
+.scroll::-webkit-scrollbar {
+  background-color: $dark-grey;
+  width: 0.7rem;
+}
+
+.scroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  background-color: darken( $dark-grey, 2% );
 }
